<resources>
    <string name="app_name">Graduation Project</string>
    <string name="watch_full_article">Watch full article</string>
    <string name="search">Search</string>
    <string name="search_keywords">Search keywords</string>
    <string name="domains_comma_separated">Domains, comma-separated:</string>
    <string name="exclude_domains_comma_separated">Exclude domains, comma-separated:</string>
    <string name="eg_bbc_co_uk">Eg: bbc.co.uk,lenta.ru</string>
    <string name="eg_rt_ru">Eg: rt.ru</string>
    <string name="sources">Sources, comma-separated:</string>
    <string name="pick_sources">Pick sources you want to search</string>
    <string name="search_in">Search in:</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="content">Content</string>
    <string name="search_in_language">Search in language:</string>
    <string name="relevancy">Relevancy</string>
    <string name="popularity">Popularity</string>
    <string name="publishedat">PublishedAt</string>
    <string name="everything">Everything</string>
    <string name="search_top_headlines">Search top headlines</string>
    <string name="search_everything">Search everything</string>
    <string name="country_to_get_headlines_for">Country to get headlines for</string>
    <string name="category_to_get_headlines_for">Category to get headlines for</string>
    <string name="unofficial_client">Unofficial client</string>
    <string name="top_headlines">Top headlines</string>
    <string name="select_date">Select date</string>
    <string name="from_date">From date:</string>
    <string name="to_date">To date:</string>
    <string name="sort_by">Sort by:</string>
    <string name="unknown_error">Unknown error</string>
    <string name="server_error">Server error</string>
    <string name="nothing_found">Nothing found!</string>
    <string name="no_image">No image</string>

    <string-array name="languages">
        <item>ar</item>
        <item>de</item>
        <item>en</item>
        <item>es</item>
        <item>fr</item>
        <item>he</item>
        <item>it</item>
        <item>nl</item>
        <item>no</item>
        <item>pt</item>
        <item>ru</item>
        <item>sv</item>
        <item>ud</item>
        <item>zh</item>
    </string-array>

    <string-array name="countries">
        <item>ae</item>
        <item>ar</item>
        <item>at</item>
        <item>au</item>
        <item>be</item>
        <item>bg</item>
        <item>br</item>
        <item>ca</item>
        <item>ch</item>
        <item>cn</item>
        <item>co</item>
        <item>cu</item>
        <item>cz</item>
        <item>de</item>
        <item>eg</item>
        <item>fr</item>
        <item>gb</item>
        <item>gr</item>
        <item>hk</item>
        <item>hu</item>
        <item>id</item>
        <item>ie</item>
        <item>il</item>
        <item>in</item>
        <item>it</item>
        <item>jp</item>
        <item>kr</item>
        <item>lt</item>
        <item>lv</item>
        <item>ma</item>
        <item>mx</item>
        <item>my</item>
        <item>ng</item>
        <item>nl</item>
        <item>no</item>
        <item>nz</item>
        <item>ph</item>
        <item>pl</item>
        <item>pt</item>
        <item>ro</item>
        <item>rs</item>
        <item>ru</item>
        <item>sa</item>
        <item>se</item>
        <item>sg</item>
        <item>si</item>
        <item>sk</item>
        <item>th</item>
        <item>tr</item>
        <item>tw</item>
        <item>ua</item>
        <item>us</item>
        <item>ve</item>
        <item>za</item>
    </string-array>

    <string-array name="categories">
        <item>business</item>
        <item>entertainment</item>
        <item>general</item>
        <item>health</item>
        <item>science</item>
        <item>sports</item>
        <item>technology</item>
    </string-array>
</resources>