<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/search_toolbar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
            app:title="@string/search_top_headlines" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?actionBarSize">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/search_queries_text_input"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/search_keywords"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:startIconDrawable="@drawable/ic_baseline_search_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/search_country_drop_down_menu"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:hint="@string/country_to_get_headlines_for"
                app:layout_constraintEnd_toEndOf="@+id/search_queries_text_input"
                app:layout_constraintStart_toStartOf="@id/search_queries_text_input"
                app:layout_constraintTop_toBottomOf="@id/search_queries_text_input">

                <AutoCompleteTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    tools:ignore="LabelFor" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/search_category_drop_down_menu"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:hint="@string/category_to_get_headlines_for"
                app:layout_constraintEnd_toEndOf="@+id/search_country_drop_down_menu"
                app:layout_constraintStart_toStartOf="@id/search_country_drop_down_menu"
                app:layout_constraintTop_toBottomOf="@id/search_country_drop_down_menu">

                <AutoCompleteTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    tools:ignore="LabelFor" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/search_sources_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/sources"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="@+id/search_category_drop_down_menu"
                app:layout_constraintTop_toBottomOf="@id/search_category_drop_down_menu" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/search_sources_text_input"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:hint="@string/eg_bbc_co_uk"
                android:visibility="gone"
                app:layout_constraintEnd_toStartOf="@+id/search_sources_plus_button"
                app:layout_constraintStart_toStartOf="@+id/search_category_drop_down_menu"
                app:layout_constraintTop_toBottomOf="@id/search_sources_label"
                app:startIconDrawable="@drawable/ic_baseline_list_alt_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/search_sources_plus_button"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/background_border_drawable"
                android:importantForAccessibility="no"
                android:scaleType="center"
                android:src="@drawable/ic_baseline_add_24"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/search_sources_text_input"
                app:layout_constraintEnd_toEndOf="@+id/search_category_drop_down_menu"
                app:layout_constraintTop_toTopOf="@id/search_sources_text_input" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>